# manabot

./: .gitignore  AGENTS.md  Dockerfile  README.md  entry.sh  pyproject.toml
.github/workflows/: ci.yml  rust-python-integration.yml
.lf/steps/: gate.md
docs/: rules_coverage.yaml
docs/rules/: README.md
frontend/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: app.css  app.html
gui/: __init__.py  _mini_fastapi.py  server.py  trace.py  villain.py
manabot/: cli.py
manabot/config/: __init__.py  load.py  presets.py  schema.py
manabot/env/: __init__.py  env.py  match.py  observation.py  rust_vector_env.py  single_agent_env.py  vector_env.py
manabot/infra/: __init__.py  experiment.py  hypers.py  log.py  metrics.py  profiler.py
manabot/model/: __init__.py  agent.md  agent.py  train.py  training.md  training_monitoring.md
manabot/sim/: player.py  sim.py
manabot/verify/: __init__.py  first_light.py  report_first_light.py  run_first_light.py  step0_env_sanity.py  step1_trivial_reward.py  step2_memorization.py  step3_beat_passive.py  step4_beat_random.py  store.py  util.py
managym/: Cargo.toml  __init__.py  __init__.pyi  pyproject.toml
managym/libmanagym.dylib.dSYM/Contents/: Info.plist
managym/libmanagym.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libmanagym.dylib.yml
managym/src/: lib.rs
managym/src/agent/: action.rs  behavior_tracker.rs  env.rs  mod.rs  observation.rs  observation_encoder.rs  opponent.rs  vector_env.rs
managym/src/cardsets/: alpha.rs  mod.rs  visions.rs
managym/src/flow/: action.rs  casting.rs  combat.rs  combat_actions.rs  damage.rs  event.rs  game.rs  identity.rs  mana.rs  mod.rs  play.rs  priority.rs  resolution.rs  runtime.rs  sba.rs  setup.rs  tick.rs  trigger.rs  triggers.rs  turn.rs  zones.rs
managym/src/infra/: log.rs  mod.rs  profiler.rs
managym/src/python/: bindings.rs  convert.rs  mod.rs  vector_env_bindings.rs
managym/src/state/: ability.rs  card.rs  game_object.rs  mana.rs  mod.rs  permanent.rs  player.rs  stack.rs  stack_object.rs  target.rs  zone.rs
managym/tests/: engine_tests.rs
managym/tests/rules/: cr_103_game_start.rs  cr_106_mana.rs  cr_117_priority.rs  cr_305_lands.rs  cr_405_stack.rs  cr_508_attackers.rs  cr_509_blockers.rs  cr_510_combat_damage.rs  cr_514_cleanup.rs  cr_601_casting.rs  cr_602_activated_abilities.rs  cr_603_triggers.rs  cr_608_resolution.rs  cr_702_keywords.rs  cr_704_sba.rs  event_log.rs  event_observations.rs  helpers.rs  mod.rs
ops/: Dockerfile  __init__.py  aws.py  bootstrap.py  job.py  machine.sh  provider.py  sandbox.py
ops/specs/: job.yaml  runtime.yaml  sandbox.yaml
reports/: sps-closeout.md
scratch/: 01-coverage-baseline.md  01-fix-ppo-bugs.md  02-pytest-green.md  02-single-agent-env.md  03-cutover.md  03-observation-cleanup.md  benchmark.md  first-light-diagnosis.md  first-light-single-agent-env.md  first-light-verification-ladder.md  gate.md  gpu-ops.md  gui-cards-replay-polish.md  gui-frontend-shell.md  jack-heart.first-light.20260303_2059.md  jack-heart.first-light.20260305_1906.md  jack-heart.gui.20260305_2042.md  jack-heart.pythonrl.20260302_0618-review.md  jack-heart.pythonrl.20260302_0618.additional-review.md  jack-heart.pythonrl.20260302_0618.md  jack-heart.sps.20260306_1025.md  pydantic-migration.md  questions.md  rules-keyword-abilities-batch.md  rules-priority-stack.md  rules-triggered-abilities-v1-man-o-war.md  rules.md  rust-migration-bindings.md  rust-migration-integration-tests.md  rust-migration-pytest-green.md  rust-migration.md  sps-rayon-parallelism.md  sps-rust-observation-encoder.md  sps-rust-vector-env.md  sps-wave.md  sps-zero-copy-buffers.md  structure-decompose-game.md  structure-event-observations.md  structure-stack-zone-unification.md
scripts/: bench_ab.py  bench_breakdown.py  bench_sps.py  bench_vector_env.py  diagnose_initial_policy.py  profile.py
tests/agent/: test_managym.py
tests/config/: test_load.py
tests/env/: test_env.py  test_match.py  test_observation.py  test_rust_vector_env.py  test_single_agent_env.py
tests/gui/: test_server.py  test_trace_api.py
tests/infra/: test_profiler.py
tests/model/: test_agent.py  test_train.py
(+117 files in other folders)
