[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manabot"
version = "0.1.0"
description = "Reinforcement Learning agent for Magic: The Gathering"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "gymnasium>=1.0.0",
    "hydra-core>=1.3.2",
    "wandb>=0.18.7",
    "psutil>=5.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["manabot"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
combine_as_imports = true
force_sort_within_sections = true
ensure_newline_before_comments = true

sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]

known_first_party = ["manabot"]
known_third_party = ["numpy", "torch", "wandb"]

no_lines_before = ["LOCALFOLDER"]
group_by_package = true

import_heading_firstparty = "Local imports"
import_heading_localfolder = "Local directory imports"
