[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manabot"
version = "0.1.0"
description = "Reinforcement Learning agent for Magic: The Gathering"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "gymnasium>=1.0.0",
    "pydantic>=2.10.0",
    "typer>=0.12.5",
    "wandb>=0.18.7",
    "psutil>=5.9.0",
    "fastapi>=0.116.0",
    "uvicorn>=0.34.0"
]

[project.scripts]
manabot = "manabot.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "boto3>=1.35.0",
]
ops = [
    "boto3>=1.35.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["manabot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running integration checks",
    "training: runs PPO training (minutes, not seconds)",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["manabot"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
