[package]
name = "managym"
version = "0.1.0"
edition = "2021"

[lib]
name = "managym"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
pyo3 = { version = "0.22", optional = true, features = ["extension-module"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
