[build-system]
requires = [
    "setuptools>=61",
    "scikit-build",
    "scikit-build-core",
    "pybind11",
    "cmake>=3.21",
    "ninja"
]
build-backend = "scikit_build_core.build"

[project]
name = "managym"
version = "0.2.0"
description = "A Magic: The Gathering environment for reinforcement learning"
authors = [
    {name = "Jack Heart", email = "jack@loopflow.studio"}
]
keywords = ["mtg", "magic", "reinforcement-learning", "gym-like"]
requires-python = ">=3.7"

[tool.scikit-build]
cmake.source-dir = ".."
wheel.packages = ["managym"]

[tool.setuptools]
packages = ["managym"]
package-dir = {managym = "managym"}

[tool.setuptools.package-data]
managym = ["*.so", "*.dylib", "**/*.dll"]
