[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "managym"
version = "0.2.0"
description = "A Magic: The Gathering environment for reinforcement learning"
authors = [{ name = "Jack Heart", email = "jack@loopflow.studio" }]
requires-python = ">=3.10"

[tool.maturin]
features = ["python"]
module-name = "managym._managym"
python-source = ".."
zip64 = true
exclude = [
  "managym/target/**",
  "managym/.venv/**",
  "managym/__pycache__/**",
]
